add: kube-api-server

--- a/docs/4.kube-api-server/1.认证.md
+++ b/docs/4.kube-api-server/1.认证.md
@@ -7,14 +7,14 @@
     - 使用 X509 客户端证书只需要 API Server 启动时配置 --client-ca-file=SOMEFILE. 在证书认证时, 其 CN 域用作用户名, 而组织机构域则用作 group 名. 
 - 静态 Token 文件
     - 使用静态 Token 文件认证只需要 API Server 启动时配置 --token-auth-file=SOMEFILE. 
-    - 该文件为 csv 格式, 每行至少包括三列 token, username, user id, token, user, uid, "group1, group2, group3"
+    - 该文件为 csv 格式, 每行至少包括三列 token, username, user id. `token, user, uid, "group1, group2, group3"`
 - 引导 Token
     - 为了支持平滑地启动引导新的集群, Kubernetes 包含了一种动态管理的持有者令牌类型, 称作启动引导令牌(Bootstrap Token). 
     - 这些令牌以 Secret 的形式保存在 kube-system 名字空间中, 可以被动态管理和创建. 
     - 控制器管理器包含的 TokenCleaner 控制器能够在启动引导令牌过期时将其删除. 
     - 在使用 kubeadm 部署 Kubernetes 时, 可通过 kubeadmtoken list 命令查询. 
 - 静态密码文件
-    - 需要 API Server 启动时配置 --basic-auth-file=SOMEFILE, 文件格式为 csv , 每行至少三列 password, user, uid, 后面是可选的 group 名 password, user, uid, "group1, group2, group3"
+    - 需要 API Server 启动时配置 --basic-auth-file=SOMEFILE, 文件格式为 csv , 每行至少三列 password, user, uid, 后面是可选的 group 名. `password, user, uid, "group1, group2, group3"`
 - ServiceAccount
     - ServiceAccount 是 Kubernetes 自动生成的, 并会自动挂载到容器的 /run/secrets/kubernetes.io/serviceaccount 目录中. 
 - OpenID
@@ -27,13 +27,16 @@
 
 
 ## 基于 webhook 的认证服务集成
+[https://github.com/kubeguard/guard](https://github.com/kubeguard/guard)
 ### 构建符合 Kubernetes 规范的认证服务
 
 需要依照 Kubernetes 规范, 构建认证服务, 用来认证 tokenreview request
+
 构建认证服务
+
 - 认证服务需要满足如下Kubernetes的规范
-- URL: https://authn.example.com/authenticate
-- Method: POST
+    - URL: https://authn.example.com/authenticate
+    - Method: POST
 - Input:
 ```
 {
@@ -46,6 +49,7 @@
 }
 ```
 - Output:
+    
 ```
 {
     "apiVersion": "authentication.k8s.io/v1beta1",
@@ -210,16 +214,17 @@ json.NewEncoder(w).Encode(map[string]interface{}{
 ```
 
 ### 生产系统中遇到的陷阱
-基于Keystone的认证插件导致Keystone故障且无法恢复<br>
-Keystone是企业关键服务<br>
-Kubernetes以Keystone作为认证插件<br>
-Keystone在出现故障后会抛出401错误<br>
-Kubernetes发现401错误后会尝试重新认证<br>
-大多数controller都有指数级back off, 重试间隔越来越慢<br>
-但gophercloud针对过期token会一直retry<br>
-大量的request积压在Keystone导致服务无法恢复<br>
-Kubernetes成为压死企业认证服务的最后一根稻草<br>
+基于 Keystone 的认证插件导致 Keystone 故障且无法恢复<br>
+Keystone 是企业关键服务<br>
+Kubernetes 以 Keystone 作为认证插件<br>
+Keystone 在出现故障后会抛出 401 错误<br>
+Kubernetes 发现 401 错误后会尝试重新认证<br>
+大多数 controller 都有指数级 back off, 重试间隔越来越慢<br>
+但 gophercloud 针对过期 token 会一直 retry<br>
+大量的 request 积压在 Keystone 导致服务无法恢复<br>
+Kubernetes 成为压死企业认证服务的最后一根稻草<br>
 
 解决方案？
+
 - Circuit break
 - Rate limit
