--- a/docs/4.kube-api-server/3.准入.md
+++ b/docs/4.kube-api-server/3.准入.md
@@ -1,9 +1,9 @@
 ## 准入控制
 为资源增加自定义属性
 
-- 作为多租户集群方案中的一环, 我们需要在namespace的准入控制中, 获取用户信息, 并将用 户信息更新的namespace的annotation
+- 作为多租户集群方案中的一环, 我们需要在 namespace 的准入控制中, 获取用户信息, 并将用 户信息更新的 namespace 的 annotation
 
-只有当namespace中有有效用户信息时, 我们才可以在namespace创建时, 自动绑定用户权限,  namespace才可用. 
+只有当 namespace 中有有效用户信息时, 我们才可以在 namespace 创建时, 自动绑定用户权限, namespace 才可用. 
 
 准入控制(Admission Control)在授权后对请求做进一步的验证或添加默认参数. 不同于授权和认证只关心请求的用户和操作, 准入控制还处理请求的内容, 并且仅对创建、更新、删除或连 接(如代理)等有效, 而对读操作无效. 
 
@@ -24,7 +24,7 @@
 - DefaultStorageClass: 为 PVC 设置默认 StorageClass
 - DefaultTolerationSeconds: 设置 Pod 的默认 forgiveness toleration 为 5 分钟
 - PodSecurityPolicy: 使用 Pod Security Policies时必须开启
-- NodeRestriction: 限制 kubelet 仅可访问node 、endpoint 、pod 、service 以及 secret、configmap、PV 和 PVC 等相关的资源
+- NodeRestriction: 限制 kubelet 仅可访问 node 、endpoint 、pod 、service 以及 secret、configmap、PV 和 PVC 等相关的资源
 
 ## 准入控制插件的开发
 ### 准入控制插件
@@ -32,7 +32,8 @@
 
 - MutatingWebhookConfiguration: 变形插件, 支持对准入对象的修改
 - ValidatingWebhookConfiguration: 校验插件, 只能对准入对象合法性进行校验, 不能修改
-![准入控制插件](images/%E5%87%86%E5%85%A5%E6%8E%A7%E5%88%B6%E6%8F%92%E4%BB%B6.png)
+
+<center>![准入控制插件](images/%E5%87%86%E5%85%A5%E6%8E%A7%E5%88%B6%E6%8F%92%E4%BB%B6.png)</center>
 ### 准入控制
 为资源增加自定义属性
 
@@ -49,19 +50,19 @@ webhooks :
 - clientConfig :
     caBundle : {{ .serverca_base64}}
     url:https://admission.local.tess.io/apis/admission.k8s.io/v1alpha1/ns-mutating
-failurePolicy : Fail
-name: ns-mutating.webhook.k8s.io
-namespaceSelector: {}
-rules:
-- apiGroups:
-  - ""
-  apiVersions :
-  - '*'      
-  operations:
-  - CREATE
-  resources :
-  - nodes
-sideEffects : Unknown
+  failurePolicy : Fail
+  name: ns-mutating.webhook.k8s.io
+  namespaceSelector: {}
+  rules:
+  - apiGroups:
+    - ""
+    apiVersions :
+    - '*'      
+    operations:
+    - CREATE
+    resources :
+    - nodes
+  sideEffects : Unknown
 # {{end}}
 
 ```
@@ -72,12 +73,12 @@ sideEffects : Unknown
 方案: 
 
 - 预定义每个 Namespace 的 ResourceQuota, 并把 spec 保存为 configmap
-  - 用户可以创建多少个 Pod
-    - BestEffortPod
-    - QoSPod
-  - 用户可以创建多少个 service
-  - 用户可以创建多少个 ingress
-  - 用户可以创建多少个 service VIP
+    - 用户可以创建多少个 Pod
+        - BestEffortPod
+        - QoSPod
+    - 用户可以创建多少个 service
+    - 用户可以创建多少个 ingress
+    - 用户可以创建多少个 service VIP
 - 创建 ResourceQuota Controller
-  - 监控 namespace 创建事件, 当 namespace 创建时, 在该 namespace 创建对应的 ResourceQuota 对象
+    - 监控 namespace 创建事件, 当 namespace 创建时, 在该 namespace 创建对应的 ResourceQuota 对象
 - apiserver 中开启 ResourceQuota 的 admission plugin
