--- a/docs/4.kube-api-server/4.限流.md
+++ b/docs/4.kube-api-server/4.限流.md
@@ -18,7 +18,7 @@
 当请求的流量过大时, 漏斗达到最大容量时会溢出, 此时请求被丢弃. <br>
 在系统看来, 请求永远是以平滑的传输速率过来, 从而起到了保护系统的作用. <br>
 
-![漏斗算法](images/%E6%BC%8F%E6%96%97%E7%AE%97%E6%B3%95.png)
+<center>![漏斗算法](images/%E6%BC%8F%E6%96%97%E7%AE%97%E6%B3%95.png)</center>
 
 ## 令牌桶算法
 
@@ -29,7 +29,7 @@
 当请求来时, 会首先到令牌桶中去拿令牌, 如果拿到了令牌, 则该请求会被处理, 并消耗掉拿到的令牌; <br>
 如果令牌桶为空, 则该请求会被丢弃. 
 
-![令牌桶算法](images/%E4%BB%A4%E7%89%8C%E6%A1%B6%E7%AE%97%E6%B3%95.png)
+<center>![令牌桶算法](images/%E4%BB%A4%E7%89%8C%E6%A1%B6%E7%AE%97%E6%B3%95.png)</center>
 
 ## APIServer 中的限流
 
