--- a/docs/4.kube-api-server/5.高可用APIServer.md
+++ b/docs/4.kube-api-server/5.高可用APIServer.md
@@ -1,4 +1,4 @@
-## 启动apiserver示例
+## 启动 apiserver 示例
 ```
 kube-apiserver --feature-gates=AllAlpha=true --runtime-config=api/all=true \
 --requestheader-allowed-names=front-proxy-client \
@@ -22,16 +22,17 @@ kube-apiserver --feature-gates=AllAlpha=true --runtime-config=api/all=true \
 --advertise-address=192.168.0.20 --etcd-servers=http://127.0.0.1:2379
 ```
 
-## 构建高可用的多副本apiserver
+## 构建高可用的多副本 apiserver
 
 apiserver 是无状态的 Rest Server<br>
-无状态所以方便 Scale Up／down<br>
+无状态所以方便 Scale Up/down<br>
+
 负载均衡
 
 - 在多个 apiserver 实例之上, 配置负载均衡
 - 证书可能需要加上 Loadbalancer VIP 重新生成
 
-## 预留充足的CPU、内存资源
+## 预留充足的 CPU、内存资源
 
 随着集群中节点数量不断增多, APIServer 对 CPU 和内存的开销也不断增大. 过少的 CPU 资源会降低其处理效率, 过少的内存资源会导致 Pod 被 OOMKilled, 直接导致服务不可用. 在规划 APIServer资源时, 不能仅看当下需求, 也要为未来预留充分. 
 
@@ -111,7 +112,9 @@ status:
 ```
 ## 授权
 
-ABAC 有期局限性, 针对每个 account 都需要做配置, 并且需要重启 apiserver RBAC 更灵活, 更符合我们通常熟知的权限管理
+ABAC 有期局限性, 针对每个 account 都需要做配置, 并且需要重启 apiserver 
+
+RBAC 更灵活, 更符合我们通常熟知的权限管理
 
 ## RBAC
 ![RBAC](images/RBAC.png)
@@ -208,11 +211,11 @@ func addKnownTypes(scheme *runtime.Scheme) error {
 - Local Tags
     - 定义在types.go中的每个对象里
         - // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
-        - // +genclient
-          // +genclient:nonNamespaced 
-          // +genclient:noVerbs
-          // +genclient:onlyVerbs=create,delete 
-          // +genclient:skipVerbs=get,list,create,update,patch,delete,deleteCollection,watc
+        - // +genclient<br>
+          // +genclient:nonNamespaced <br>
+          // +genclient:noVerbs<br>
+          // +genclient:onlyVerbs=create,delete <br>
+          // +genclient:skipVerbs=get,list,create,update,patch,delete,deleteCollection,watch<br>
           // +genclient:method=Create,verb=create,result=k8s.io/apimachinery/pkg/apis/meta/v1.Status
 
 ### 实现 etcd storage
@@ -278,7 +281,7 @@ func (podStatusStrategy) PrepareForUpdate(ctx context.Context, obj, old runtime.
 ```
 configMapStorage := configmapstore.NewREST(restOptionsGetter)
 restStorageMap := map[string]rest.Storage{
-"configMaps":                    configMapStorage,
+    "configMaps":                    configMapStorage,
 }
 ```
 定义对象的 StorageMap
@@ -303,6 +306,8 @@ if err := m.GenericAPIServer.InstallLegacyAPIGroup(genericapiserver.DefaultLegac
     - 为对象构建 Lister 框架, 用于为 Get 和 List 操作, 构建客户端缓存
 - coversion-gen
     - 为对象构建 Conversion 方法, 用于内外版本转换以及不同版本号的转换
+
+[https://github.com/kubernetes/code-generator](https://github.com/kubernetes/code-generator)
 ### hack/update-codegen.sh
 依赖
 ```
@@ -320,5 +325,4 @@ ${GOPATH}/bin/deepcopy-gen --input-dirs {versioned-package-pach}
 --go-header-file ${SCRIPT_ROOT}/hack/boilerplate.go.txt
 ```
 ### APIServer代码走读
-
-https://cncamp.notion.site/kube-apiserver-10d5695cbbb14387b60c6d622005583d
+[https://cncamp.notion.site/kube-apiserver-10d5695cbbb14387b60c6d622005583d](https://cncamp.notion.site/kube-apiserver-10d5695cbbb14387b60c6d622005583d)
