--- a/docs/4.kube-api-server/2.鉴权.md
+++ b/docs/4.kube-api-server/2.鉴权.md
@@ -57,12 +57,12 @@ rules:
 ## binding
 ```
 # RoleBinding示例(引用ClusterRole)
-# This role binding allows "dave" to read secrets in the "development"
+# This role binding allows "dave" to read secrets in the "development" namespace.
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: read-secrets
-  namespace: development # This only grants permissions within the
+  namespace: development # This only grants permissions within the "development" namespace.
 subjects:
 - kind: User
   name: dave
@@ -75,9 +75,11 @@ roleRef:
 ![binding](images/binding.png)
 
 ## 账户\组的管理
-角色绑定(Role Binding)  是将角色中定义的权限赋予一个或者一组用户. 它包含若干 主体  (用户、组或服务账户)的列表和对这些主体所获得的角色的引用. 
+角色绑定(Role Binding)  是将角色中定义的权限赋予一个或者一组用户. <br>
+它包含若干 主体  (用户、组或服务账户)的列表和对这些主体所获得的角色的引用. 
 
 组的概念: 
+
 - 当与外部认证系统对接时, 用户信息 (UserInfo) 可包含 Group 信息, 授权可针对用户群组
 - 当对 ServiceAccount 授权时, Group 代表某个 Namespace 下的所有 ServiceAccount
 
@@ -116,14 +118,14 @@ roleRef:
 User
 
 - 管理员
-- 所有资源的所有权限？？
+    - 所有资源的所有权限？？
 - 普通用户
-- 是否有该用户创建的namespace下的所有object的操作权限？
-- 对其他用户的namespace资源是否可读, 是否可写？
+    - 是否有该用户创建的namespace下的所有object的操作权限？
+    - 对其他用户的namespace资源是否可读, 是否可写？
 
 SystemAccount
 
-- SystemAccount是开发者(kubernetes developer或者domain developer)创建应用后, 应 用于apiserver通讯需要的身份
+- SystemAccount 是开发者(kubernetes developer 或者 domain developer)创建应用后, 应用于 apiserver 通讯需要的身份
 - 用户可以创建自定的 ServiceAccount, kubernetes 也为每个 namespace 创建 default ServiceAccount
 - Default ServiceAccount 通常需要给定权限以后才能对 apiserver 做写操作
 
@@ -142,14 +144,14 @@ Namespace-creator role 定义用户可操作的对象和对应的读写操作.
 ## 与权限相关的其他最佳实践
 ClusterRole 是非 namespace 绑定的, 针对整个集群生效<br>
 通常需要创建一个管理员角色, 并且绑定给开发运营团队成员<br>
-ThirdPartyResource和CustomResourceDefinition是全局资源, 普通用户创建 ThirdPartyResource以后, 需要管理员授予相应权限后才能真正操作该对象<br>
-针对所有的角色管理, 建议创建spec, 用源代码驱动<br>
+ThirdPartyResource 和 CustomResourceDefinition 是全局资源, 普通用户创建 ThirdPartyResource以后, 需要管理员授予相应权限后才能真正操作该对象<br>
+针对所有的角色管理, 建议创建 spec, 用源代码驱动<br>
 
 - 虽然可以通过edit操作来修改权限, 但后期会导致权限管理混乱, 可能会有很多临时创建出来的 角色和角色绑定对象, 重复绑定某一个资源权限
 
-权限是可以传递的, 用户A可以将其对某对象的某操作, 抽取成一个权限, 并赋给用户B<br>
-防止海量的角色和角色绑定对象, 因为大量的对象会导致鉴权效率低, 同时给apiserver增加负担 ServiceAccount也需要授权的, 否则你的component可能无法操作某对象<br>
-Tips: SSH到master节点通过insecure port访问apiserver可绕过鉴权, 当需要做管理操作又没 有权限时可以使用(不推荐)<br>
+权限是可以传递的, 用户 A 可以将其对某对象的某操作, 抽取成一个权限, 并赋给用户B<br>
+防止海量的角色和角色绑定对象, 因为大量的对象会导致鉴权效率低, 同时给 apiserver 增加负担 ServiceAccount 也需要授权的, 否则你的 component 可能无法操作某对象<br>
+Tips: SSH 到 master 节点通过 insecure port 访问 apiserver 可绕过鉴权, 当需要做管理操作又没有权限时可以使用(不推荐)<br>
 
 ## 运营过程中出现的陷阱
 案例1:
