--- a/docs/4.kube-api-server/1.认证.md
+++ b/docs/4.kube-api-server/1.认证.md
@@ -3,9 +3,9 @@
 开启 TLS 时, 所有的请求都需要首先认证. Kubernetes 支持多种认证机制, 并支持同时开启多个认证插件(只要有一个认证通过即可). 如果认证成功, 则用户的 username 会传入授权模块做进一步授权验证; 而对于认证失败的请求则返回 HTTP 401. 
 
 ## 认证插件
-- X509 证书
+- X509 证书(默认)
     - 使用 X509 客户端证书只需要 API Server 启动时配置 --client-ca-file=SOMEFILE. 在证书认证时, 其 CN 域用作用户名, 而组织机构域则用作 group 名. 
-- 静态 Token 文件
+- 静态 Token 文件(最简单)
     - 使用静态 Token 文件认证只需要 API Server 启动时配置 --token-auth-file=SOMEFILE. 
     - 该文件为 csv 格式, 每行至少包括三列 token, username, user id. `token, user, uid, "group1, group2, group3"`
 - 引导 Token
@@ -13,19 +13,42 @@
     - 这些令牌以 Secret 的形式保存在 kube-system 名字空间中, 可以被动态管理和创建. 
     - 控制器管理器包含的 TokenCleaner 控制器能够在启动引导令牌过期时将其删除. 
     - 在使用 kubeadm 部署 Kubernetes 时, 可通过 kubeadmtoken list 命令查询. 
-- 静态密码文件
+- 静态密码文件(类似 "静态 Token 文件")
     - 需要 API Server 启动时配置 --basic-auth-file=SOMEFILE, 文件格式为 csv , 每行至少三列 password, user, uid, 后面是可选的 group 名. `password, user, uid, "group1, group2, group3"`
-- ServiceAccount
+- ServiceAccount(系统账户, Kubernetes 自带的)
     - ServiceAccount 是 Kubernetes 自动生成的, 并会自动挂载到容器的 /run/secrets/kubernetes.io/serviceaccount 目录中. 
+        - /run/secrets/kubernetes.io/serviceaccount/{ca.crt,namespace,token}
 - OpenID
     - OAuth 2.0 的认证机制
-- Webhook 令牌身份认证
+- Webhook 令牌身份认证(集成现有的认证平台)
     - --authentication-token-webhook-config-file 指向一个配置文件, 其中描述如何访问远程的 Webhook 服务. 
     - --authentication-token-webhook-cache-ttl 用来设定身份认证决定的缓存时间. 默认时长为 2 分钟. 
-- 匿名请求
+- 匿名请求(不建议用)
     - 如果使用 AlwaysAllow 以外的认证模式, 则匿名请求默认开启, 但可用 --anonymous-auth=false 禁止匿名请求. 
 
-
+### X509 证书
+/etc/kubernetes/admin.conf
+```
+apiVersion: v1
+clusters:
+- cluster:
+    certificate-authority-data: (CA-data)
+    server: https://192.168.1.218:6443 (服务器地址)
+  name: kubernetes (集群名称)
+contexts: (集群上下文)
+- context: 
+    cluster: kubernetes (连接哪个集群)
+    user: kubernetes-admin (用哪个用户连接这个集群)
+  name: kubernetes-admin@kubernetes
+current-context: kubernetes-admin@kubernetes
+kind: Config
+preferences: {}
+users: (用户信息)
+- name: kubernetes-admin (用户名)
+  user:
+    client-certificate-data: (用户的 cert-data)
+    client-key-data: (用户的 key-data)
+```
 ## 基于 webhook 的认证服务集成
 [https://github.com/kubeguard/guard](https://github.com/kubeguard/guard)
 ### 构建符合 Kubernetes 规范的认证服务
