add: kube-api-server: 认证

--- a/docs/4.kube-api-server/1.认证.md
+++ b/docs/4.kube-api-server/1.认证.md
@@ -20,7 +20,7 @@
         - /run/secrets/kubernetes.io/serviceaccount/{ca.crt,namespace,token}
 - OpenID
     - OAuth 2.0 的认证机制
-- Webhook 令牌身份认证(集成现有的认证平台)
+- Webhook 令牌身份认证(集成现有的认证平台，应用场景比较广)
     - --authentication-token-webhook-config-file 指向一个配置文件, 其中描述如何访问远程的 Webhook 服务. 
     - --authentication-token-webhook-cache-ttl 用来设定身份认证决定的缓存时间. 默认时长为 2 分钟. 
 - 匿名请求(不建议用)
@@ -58,7 +58,7 @@ users: (用户信息)
 构建认证服务
 
 - 认证服务需要满足如下Kubernetes的规范
-    - URL: https://authn.example.com/authenticate
+    - URL: https://authn.example.com/authenticate (webhook 服务地址)
     - Method: POST
 - Input:
 ```
