add: kube-api-server: 认证: webhook

--- a/docs/4.kube-api-server/1.认证.md
+++ b/docs/4.kube-api-server/1.认证.md
@@ -155,6 +155,7 @@ json.NewEncoder(w).Encode(map[string]interface{}{
     "status":     trs,
 })
 ```
+
 ### 配置认证服务
 ```
 {
@@ -190,6 +191,7 @@ json.NewEncoder(w).Encode(map[string]interface{}{
 }
 
 ```
+
 ### 配置apiserver
 可以是任何认证系统
 
@@ -251,3 +253,9 @@ Kubernetes 成为压死企业认证服务的最后一根稻草<br>
 
 - Circuit break
 - Rate limit
+
+### 一般用法
+主要防止 api-server 启动时，webhook 没有启动成功。
+
+1. 运行成 api-server 的一个 sidecar
+2. 写在 /etc/kubernetes/manifests/webhook.yaml
