--- a/docs/4.kube-api-server/test/1.认证练习.md
+++ b/docs/4.kube-api-server/test/1.认证练习.md
@@ -1,4 +1,5 @@
 # 认证练习
+
 ## X509 证书
 ### Create private key and csr
 
@@ -236,4 +237,84 @@ k get sa demo -oyaml
 ```
 k get secret demo-token-7k9j2 -oyaml
 k get secret demo-token-7k9j2 -oyaml|grep token
+```
+
+## webhook
+
+### Start authservice
+
+#### 编译
+```sh
+make build
+```
+
+#### 运行 webhook 程序
+```sh
+./bin/amd64/authn-webhook
+```
+
+#### 测试启动结果
+```
+curl 192.168.1.218:3000/authenticate
+```
+outpur
+```
+{"apiVersion":"authentication.k8s.io/v1beta1","kind":"TokenReview","status":{"user":{}}}
+```
+
+### Create webhook config
+
+```sh
+mkdir -p /etc/config
+cp webhook-config.json /etc/config
+```
+
+### Backup old apiserver
+
+```sh
+cp /etc/kubernetes/manifests/kube-apiserver.yaml ~/kube-apiserver.yaml
+```
+
+### Update apiserver configuration to enable webhook
+主要修改: --authentication-token-webhook-config-file=/etc/config/webhook-config.json 相关配置(关键字: /etc/config)
+```sh
+cp specs/kube-apiserver.yaml /etc/kubernetes/manifests/kube-apiserver.yaml
+```
+
+### Create a personal access token in github and put your github personal access token to kubeconfig
+
+#### 在 GitHub 上创建 token
+[https://github.com/settings/tokens/new](https://github.com/settings/tokens/new) 下，`New GitHub App`
+
+复制下来生成的 Token
+
+#### 修改连接配置
+```sh
+vi ~/.kube/config
+```
+
+```yaml
+- name: cjx
+  user:
+    token: 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
+```
+
+### Get pods by mfanjie
+
+```sh
+kubectl get po --user cjx
+```
+output
+```
+Error from server (Forbidden): pods is forbidden: User "chenjinxin1124" cannot list resource "pods" in API group "" in the namespace "default"
+```
+webhook output
+```
+2022/11/27 22:32:10 receving request
+2022/11/27 22:32:11 [Success] login as chenjinxin1124
+```
+### Reset the env
+
+```sh
+cp ~/kube-apiserver.yaml /etc/kubernetes/manifests/kube-apiserver.yaml
 ```
