add: kube-api-server: 授权

--- a/docs/4.kube-api-server/2.鉴权.md
+++ b/docs/4.kube-api-server/2.鉴权.md
@@ -1,9 +1,8 @@
 ## 授权
 
-
 授权主要是用于对集群资源的访问控制, 通过检查请求包含的相关属性值, 与相对应的访问策略相比较, API请求必须满足某些策略才能被处理. 跟认证类似, Kubernetes 也支持多种授权机制, 并支持同时开启多个授权插件(只要有一个验证通过即可). 如果授权成功, 则用户的请求会发送到准入控制模块做进一步的请求验证; 对于授权失败的请求则返回 HTTP 403. 
 
-Kubernetes授权仅处理以下的请求属性: 
+Kubernetes 授权仅处理以下的请求属性: 
 
 - user, group, extra
 - API、请求方法(如get 、post 、update 、patch 和 delete)和请求路径(如/api)
@@ -13,8 +12,8 @@ Kubernetes授权仅处理以下的请求属性:
 
 目前, Kubernetes 支持以下授权插件: 
 
-- ABAC
-- RBAC
+- ABAC(类似于静态密码)
+- RBAC(基于角色的，能满足绝大部分场景)
 - Webhook
 - Node
 
