add: kube-api-server: 授权

--- a/docs/4.kube-api-server/2.鉴权.md
+++ b/docs/4.kube-api-server/2.鉴权.md
@@ -141,12 +141,12 @@ Namespace-creator role 定义用户可操作的对象和对应的读写操作.
 - 在当前 namespace 创建 rolebinding 对象, 并将 namespace-creator 角色和用户绑定
 
 ## 与权限相关的其他最佳实践
-ClusterRole 是非 namespace 绑定的, 针对整个集群生效<br>
+ClusterRole 是非 namespace 绑定的, 针对整个集群生效。不建议给普通用户绑定。<br>
 通常需要创建一个管理员角色, 并且绑定给开发运营团队成员<br>
-ThirdPartyResource 和 CustomResourceDefinition 是全局资源, 普通用户创建 ThirdPartyResource以后, 需要管理员授予相应权限后才能真正操作该对象<br>
+ThirdPartyResource 和 CustomResourceDefinition 是全局资源, 普通用户创建 ThirdPartyResource/CustomResourceDefinition 以后, 需要管理员授予相应权限后才能真正操作该对象<br>
 针对所有的角色管理, 建议创建 spec, 用源代码驱动<br>
 
-- 虽然可以通过edit操作来修改权限, 但后期会导致权限管理混乱, 可能会有很多临时创建出来的 角色和角色绑定对象, 重复绑定某一个资源权限
+- 虽然可以通过 edit 操作来修改权限, 但后期会导致权限管理混乱, 可能会有很多临时创建出来的 角色和角色绑定对象, 重复绑定某一个资源权限
 
 权限是可以传递的, 用户 A 可以将其对某对象的某操作, 抽取成一个权限, 并赋给用户B<br>
 防止海量的角色和角色绑定对象, 因为大量的对象会导致鉴权效率低, 同时给 apiserver 增加负担 ServiceAccount 也需要授权的, 否则你的 component 可能无法操作某对象<br>
