--- a/docs/4.kube-api-server/3.准入.md
+++ b/docs/4.kube-api-server/3.准入.md
@@ -1,11 +1,26 @@
 ## 准入控制
+- 配额管理
+    - 原因：资源有限，如何限定某个用户有多少资源？
+- 方案
+    - 预定义每个 Namespace 的 ResourceQuota，并把 spec 保存为 configmap
+        - 用户可以创建多少个 Pod
+            - BestEffortPod
+            - QoSPod
+        - 用户可以创建多少个 service
+        - 用户可以创建多少个 ingress
+        - 用户可以创建多少个 service VIP
+    - 创建 ResourceQuota Controller
+        监控 namespace 创建事件，当 namespace 创建时，在该 namespace 创建对应的 ResourceQuota 对象
+    - apiserver 中开启 ResourceQuota 的 admission plugin
+
+
 为资源增加自定义属性
 
-- 作为多租户集群方案中的一环, 我们需要在 namespace 的准入控制中, 获取用户信息, 并将用 户信息更新的 namespace 的 annotation
+- 作为多租户集群方案中的一环, 我们需要在 namespace 的准入控制中, 获取用户信息, 并将用户信息更新的 namespace 的 annotation
 
 只有当 namespace 中有有效用户信息时, 我们才可以在 namespace 创建时, 自动绑定用户权限, namespace 才可用. 
 
-准入控制(Admission Control)在授权后对请求做进一步的验证或添加默认参数. 不同于授权和认证只关心请求的用户和操作, 准入控制还处理请求的内容, 并且仅对创建、更新、删除或连 接(如代理)等有效, 而对读操作无效. 
+准入控制(Admission Control)在授权后对请求做进一步的验证或添加默认参数. 不同于授权和认证只关心请求的用户和操作, 准入控制还处理请求的内容, 并且仅对创建、更新、删除或连接(如代理)等有效, 而对读操作无效. 
 
 准入控制支持同时开启多个插件, 它们依次调用, 只有全部插件都通过的请求才可以放过进入系统. 
 
